# financial-analyst

./: LICENSE  README.md  pyproject.toml
src/financial_analyst/: __init__.py
src/financial_analyst/analysis/: __init__.py  quant.py
tests/: test_quant.py
